Fix henacat to render bulletin board app